--- a/taotao13/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao13/taotao-manager/taotao-manager-service/pom.xml
@@ -77,9 +77,9 @@
             <!--<artifactId>activemq-all</artifactId>-->
         <!--</dependency>-->
         <!-- Redis客户端 -->
-        <!--<dependency>-->
-            <!--<groupId>redis.clients</groupId>-->
-            <!--<artifactId>jedis</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
     </dependencies>
 </project>
